<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:padding="20dip">

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="20dip"
    android:textSize="16sp"
    android:text="@string/dialogo_credito1"
    android:textAlignment="center"
    android:textStyle="bold" />

<TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    android:paddingTop="20dip"
        android:textSize="16sp"
        android:text="@string/dialogo_credito2"
        android:textAlignment="center" />
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="20dip"
    android:textSize="16sp"
    android:text="@string/dialogo_credito3"
    android:autoLink="web"
    android:textAlignment="center" />

</LinearLayout>
